# neurosim_cu_esim

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
csrc/: evsim_bindings.cpp  evsim_kernel.cu
csrc/include/: utils.h
neurosim_cu_esim/: __init__.py  _backend.py  simulator.py
scripts/: benchmark_esim.py
tests/: conftest.py  test_backend.py  test_simulator.py
